# leaf

./: .gitignore  Cargo.toml  README.md  colophon.yaml  rust-toolchain.toml  sample.md
.cargo/: config.toml
apps/leaf/: Cargo.toml
apps/leaf-editor/: bootstrap.sh  project.yml
apps/leaf-editor/App/: ContentView.swift  LeafEditorApp.swift
apps/leaf-ffi-ios/: .gitignore  Info.plist  bootstrap.sh  project.yml
apps/leaf-ffi-ios/App/: LeafEditorApp.swift
apps/leaf-ios/: Cargo.toml
apps/leaf-ios/ios/: gpui_ios.h  main.m  project.yml
apps/leaf-tui/: Cargo.toml
apps/leaf-tui/src/: main.rs  ui.rs
apps/leaf-web-demo/: index.html
crates/leaf/: Cargo.toml
crates/leaf-core/: Cargo.toml
crates/leaf-core/examples/: bench.rs
crates/leaf-core/src/: doc.rs  html.rs  lib.rs  style.rs  wysiwyg.rs
crates/leaf-ffi/: Cargo.toml  Package.swift  README.md  uniffi-bindgen.rs  uniffi.toml
crates/leaf-ffi/Sources/LeafUI/: AttributedRow.swift  EditorLayout.swift  EditorTheme.swift  LeafEditorView.swift  LeafTextView.swift  LeafTextViewiOS.swift  Platform.swift
crates/leaf-ffi/examples/ios/: bootstrap.sh  project.yml
crates/leaf-ffi/examples/ios/App/: ContentView.swift
crates/leaf-ffi/src/: lib.rs
crates/leaf-gpui/: Cargo.toml
crates/leaf-gpui/src/: lib.rs  prompt.rs  style.rs
crates/leaf-gui/: Cargo.toml
crates/leaf-gui/src/: main.rs  style.rs
crates/leaf-ios/: .gitignore  Cargo.toml  rust-toolchain.toml
crates/leaf-ios/ios/: Info.plist  main.m  project.yml
crates/leaf-ios/src/: lib.rs
crates/leaf-ratatui/: Cargo.toml
crates/leaf-ratatui/src/: image.rs  input.rs  lib.rs  render.rs  style.rs
crates/leaf-tui/: Cargo.toml
crates/leaf-tui/src/: image.rs  main.rs  style.rs  ui.rs
crates/leaf-wasm/: Cargo.toml  README.md
crates/leaf-wasm/src/: lib.rs
crates/leaf-wasm/web/: index.html
crates/leaf-wasm/web/src/: editor.d.ts  index.d.ts
crates/leaf/src/: main.rs
scripts/: build-xcframework.sh  check-swift.sh  drive-tui.py  test-swift.sh
