[workspace]
resolver = "3"
# crates/* are all Rust libraries. Under apps/ the Rust binaries are listed
# explicitly — apps/ also holds non-Cargo frontends (apps/leaf-web-demo) that a
# glob would wrongly try to load as workspace members.
members = ["crates/*", "apps/leaf-tui", "apps/leaf"]
# leaf-ios is a standalone workspace (it path-deps the external gpui-mobile fork
# and needs its own [patch] table); keep its heavy gpui/wgpu graph out of this
# workspace's Cargo.lock. Build it explicitly from apps/leaf-ios.
exclude = ["apps/leaf-ios"]
# `cargo run -- file.md` and `cargo build` default to the TUI, so the workspace
# split doesn't change the everyday UX. leaf-gui, once it grows a binary, is
# built explicitly with `-p leaf-gui`.
default-members = ["apps/leaf-tui"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# The document AST + offset-addressed span-splice editor. Same sibling checkout
# bough uses; leaf drives its P0–P5 surface (edit_range, node_at, nodes,
# wrap_range/toggle_inline/set_block).
# Published on crates.io as `twig-doc` (the `twig` name is taken); the library's
# import name is still `twig` (its `[lib] name`), so `use twig::…` keeps working.
# 2.0: `FlatNode` carries a table's `head`/`alignment` (the delimiter row that
# spells alignment out is consumed by the parser and leaves no node, so the
# snapshot is the only source), and is `#[non_exhaustive]`.
# 2.1: `toggle_block_container` (blockquote/bullet/ordered) and `insert_link`,
# which spells a text-less link the way the format does — an autolink where the
# destination is one, `[dest](dest)` where it isn't.
twig-doc = { version = "2.3.0" }
anyhow = "1"
# Frontend-neutral core: the caret/selection model + AST→glyph map, styled with
# a toolkit-agnostic Style. Each frontend crate maps that to its own styling.
leaf-core = { path = "crates/leaf-core", version = "0.1.0" }
