[package]
name = "leaf-core"
version.workspace = true
edition.workspace = true
description = "Frontend-neutral core of leaf: a byte-offset caret/selection model over twig, plus an AST→glyph map, styled with a toolkit-agnostic Style."

[dependencies]
twig-doc.workspace = true
anyhow.workspace = true
unicode-segmentation = "1.13.3"
# Display width: a column is a terminal cell, and a `col` counted in characters
# drifts from the glyph it names by one cell per wide character on the line.
unicode-width = "0.2.0"
