[package]
name = "leaf-gpui"
version.workspace = true
edition.workspace = true
description = "Embeddable gpui rich-text editor widget for leaf: the Editor view, its input/rendering, and a turnkey app runner. Built on leaf-core + twig."

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true

# gpui is consumed from the Zed monorepo as a git dependency (not on crates.io),
# pinned to a specific commit. The `font-kit` feature on gpui_platform is
# REQUIRED — without it the macOS backend rasterizes no glyphs (invisible text).
gpui = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b", features = ["font-kit"] }
