[package]
name = "leaf-gpui"
version.workspace = true
edition.workspace = true
description = "Embeddable gpui rich-text editor widget for leaf: the Editor view, its input/rendering, and a turnkey app runner. Built on leaf-core + twig."

[features]
# The `Editor` widget itself is backend-agnostic (it only touches `gpui`), so the
# desktop platform backend is an optional, default-on dependency. A mobile host
# (e.g. leaf-ios on gpui-mobile) depends on this crate with
# `default-features = false` so the desktop-only `gpui_platform` is never built.
default = ["desktop"]
desktop = ["dep:gpui_platform"]

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true

# gpui is consumed from the Zed monorepo as a git dependency (not on crates.io),
# pinned to a specific commit. The `font-kit` feature on gpui_platform is
# REQUIRED — without it the macOS backend rasterizes no glyphs (invisible text).
gpui = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b" }
# Desktop-only backend, pulled in only by the `desktop` feature. Never compiled
# for iOS/Android, where the host supplies gpui-mobile's platform layer instead.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b", features = ["font-kit"], optional = true }
