[package]
name = "leaf-gpui"
version.workspace = true
edition.workspace = true
description = "Embeddable gpui rich-text editor widget for leaf: the Editor view, its input/rendering, and a turnkey app runner. Built on leaf-core + twig."

[features]
# The `Editor` widget itself is backend-agnostic (it only touches `gpui`), so the
# desktop platform backend is an optional, default-on dependency. A mobile host
# (e.g. leaf-ios on gpui-mobile) depends on this crate with
# `default-features = false` so the desktop-only `gpui_platform` is never built.
default = ["desktop"]
# arboard rides with the desktop backend, not with the widget: it is the only way
# to put `text/html` on a real pasteboard (gpui's clipboard cannot carry it — see
# `set_clipboard`), and its cfg cascade routes every unix that isn't macOS to the
# X11/Wayland backend, iOS included. A mobile host must not build it.
desktop = ["dep:gpui_platform", "dep:arboard"]

[dependencies]
leaf-core.workspace = true
anyhow.workspace = true

# gpui is consumed from the Zed monorepo as a git dependency (not on crates.io),
# pinned to a specific commit. The `font-kit` feature on gpui_platform is
# REQUIRED — without it the macOS backend rasterizes no glyphs (invisible text).
gpui = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b" }
# Desktop-only backend, pulled in only by the `desktop` feature. Never compiled
# for iOS/Android, where the host supplies gpui-mobile's platform layer instead.
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b", features = ["font-kit"], optional = true }
# The system clipboard, for the desktop build only (see the `desktop` feature).
# Same crate and the same open-fresh-per-operation discipline as leaf-tui, which
# is what lets both frontends carry the same two flavors.
arboard = { version = "3", optional = true }

[dev-dependencies]
# gpui's own test harness, which hands out a real `Window` (and so a text system
# that shapes lines) with no platform window on screen. That's what lets the
# table's geometry — column x, caret round-trips — be an actual test instead of a
# claim: everything the widget draws is measured through a text system, and a
# `Window` is the only way to reach one.
gpui = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b", features = ["test-support"] }
