[package]
name = "leaf-gui"
version.workspace = true
edition.workspace = true
description = "The leaf standalone GUI application — a thin binary over the leaf-gpui editor widget."

[[bin]]
name = "leaf-gui"
path = "src/main.rs"

[dependencies]
leaf-gpui = { path = "../leaf-gpui", version = "0.1.0" }
