[package]
name = "leaf-gui"
version.workspace = true
edition.workspace = true
description = "The leaf standalone GUI application — a thin host around the leaf-gpui editor widget."

[[bin]]
name = "leaf-gui"
path = "src/main.rs"

[dependencies]
leaf-gpui = { path = "../leaf-gpui", version = "0.1.0" }
leaf-core.workspace = true

# The app shell owns the window and the run-loop, so it pulls gpui + the platform
# backend directly (font-kit is required — see leaf-gpui's Cargo.toml).
gpui = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "bd72919555149fc072d33c4fa6805c742a11ee8b", features = ["font-kit"] }
